syntax = "proto3";

package stwartchain.core;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "stwartchain/core/params.proto";
import "stwartchain/core/stats.proto";

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/core/types";

// GenesisState defines the core module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params params    = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  repeated Stats  statsList = 2 [(gogoproto.nullable) = false] ;
}

